--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <a href="exhibitions/FR/tempel-amsterdam.html"><div class="date">2022</div><div class="title"><span>The Overview Project</span></div><div class="info">Tempel Amsterdam <span>(NL)</span></div><div class="medium">Installation visuelle et sonore</div></a>
                     </div>
                     <div class="images">
-                        <img src="img/overview/img9.JPG" id="img3">
+                        <img src="img/overview/img9.jpg" id="img3">
                     </div>
                     
                     <div class="text" id="show4">
