--- a/exhibitions/FR/tempel-amsterdam.html
+++ b/exhibitions/FR/tempel-amsterdam.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Expositions – JZ</title>
 		<link rel="stylesheet" href="../CSS/tempel-amsterdam.css">
-    <script src="../js/exhibition-tab.js" defer></script>
-    <script src="../js/tempel-img.js" defer></script>
+    <script src="../JS/exhibition-tab.js" defer></script>
+    <script src="../JS/tempel-img.js" defer></script>
 	</head>
 
 	<body>
