--- a/exhibitions/PT/text-me.html
+++ b/exhibitions/PT/text-me.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Exposições – JZ</title>
 		<link rel="stylesheet" href="../CSS/text-me.css">
-    <script src="../js/exhibition-tab.js" defer></script>
+    <script src="../JS/exhibition-tab.js" defer></script>
 	</head>
 
 	<body>
