--- a/exhibitions/EN/the-courtroom.html
+++ b/exhibitions/EN/the-courtroom.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Exhibitions – JZ</title>
 		<link rel="stylesheet" href="../CSS/the-courtroom.css">
-    <script src="../js/exhibition-tab.js" defer></script>
-    <script src="../js/courtroom-img.js" defer></script>
+    <script src="../JS/exhibition-tab.js" defer></script>
+    <script src="../JS/courtroom-img.js" defer></script>
 	</head>
 
 	<body>
