--- a/pages/FR/the-overview-project.html
+++ b/pages/FR/the-overview-project.html
@@ -104,7 +104,7 @@
             </div>
 
             <div class="pic">
-              <img src="../../img/overview/5.jpg" alt="">
+              <img src="../../img/overview/5.JPG" alt="">
             </div>
 
             <div class="pic">
@@ -120,7 +120,7 @@
             </div>
 
             <div class="pic">
-              <img src="../../img/overview/overview23.jpg" alt="">
+              <img src="../../img/overview/overview23.JPG" alt="">
             </div>
 
           </div>
