--- a/pages/EN/the-overview-project.html
+++ b/pages/EN/the-overview-project.html
@@ -102,7 +102,7 @@
             </div>
 
             <div class="pic">
-              <img src="../../img/overview/5.jpg" alt="">
+              <img src="../../img/overview/5.JPG" alt="">
             </div>
 
             <div class="pic">
@@ -118,7 +118,7 @@
             </div>
 
             <div class="pic">
-              <img src="../../img/overview/overview23.jpg" alt="">
+              <img src="../../img/overview/overview23.JPG" alt="">
             </div>
 
           </div>
