--- a/pages/PT/the-overview-project.html
+++ b/pages/PT/the-overview-project.html
@@ -105,7 +105,7 @@
             </div>
 
             <div class="pic">
-              <img src="../../img/overview/5.jpg" alt="">
+              <img src="../../img/overview/5.JPG" alt="">
             </div>
 
             <div class="pic">
@@ -121,7 +121,7 @@
             </div>
 
             <div class="pic">
-              <img src="../../img/overview/overview23.jpg" alt="">
+              <img src="../../img/overview/overview23.JPG" alt="">
             </div>
 
           </div>
