--- a/exhibitions/FR/tempel-amsterdam.html
+++ b/exhibitions/FR/tempel-amsterdam.html
@@ -94,7 +94,7 @@
 
             <div class="slide">
               <div class="pic">
-                  <img src="../../img/overview/5.jpg" alt="">
+                  <img src="../../img/overview/5.JPG" alt="">
               </div>
             </div>
 
@@ -118,13 +118,13 @@
 
             <div class="slide">
               <div class="pic">
-                  <img src="../../img/overview/tempel-7.jpg" alt="">
+                  <img src="../../img/overview/tempel-7.JPG" alt="">
               </div>
             </div>
 
             <div class="slide">
               <div class="pic">
-                <img src="../../img/overview/tempel-8.jpg" alt="">
+                <img src="../../img/overview/tempel-8.JPG" alt="">
               </div>
             </div>
 
