--- a/exhibitions/PT/tempel-amsterdam.html
+++ b/exhibitions/PT/tempel-amsterdam.html
@@ -93,7 +93,7 @@
 
             <div class="slide">
               <div class="pic">
-                  <img src="../../img/overview/5.jpg" alt="">
+                  <img src="../../img/overview/5.JPG" alt="">
               </div>
             </div>
 
@@ -117,13 +117,13 @@
 
             <div class="slide">
               <div class="pic">
-                  <img src="../../img/overview/tempel-7.jpg" alt="">
+                  <img src="../../img/overview/tempel-7.JPG" alt="">
               </div>
             </div>
 
             <div class="slide">
               <div class="pic">
-                <img src="../../img/overview/tempel-8.jpg" alt="">
+                <img src="../../img/overview/tempel-8.JPG" alt="">
               </div>
             </div>
 
