--- a/index.html
+++ b/index.html
@@ -945,6 +945,7 @@
         <footer>
             <p><a href="https://instagram.com/julianazepka">@JULIANAZEPKA</a></p>
             <p><a href="mailto:j.zepka@yahoo.fr">CONTACT</a></p>
+		<p>All rights reserved © 2024</p>
         </footer>
         
 	</body>
