--- a/index-pt.html
+++ b/index-pt.html
@@ -934,6 +934,7 @@
         <footer>
         <p><a href="https://instagram.com/julianazepka">@JULIANAZEPKA</a></p>
             <p><a href="mailto:j.zepka@yahoo.fr">CONTATO</a></p>
+		<p>Direitos reservados © 2024</p>
         </footer>
 	</body>
 </html>
