--- a/index-en.html
+++ b/index-en.html
@@ -933,6 +933,7 @@
         <footer>
             <p><a href="https://instagram.com/julianazepka">@JULIANAZEPKA</a></p>
             <p><a href="mailto:j.zepka@yahoo.fr">CONTACT</a></p>
+		<p>All rights reserved © 2024</p>
         </footer>
 	</body>
 </html>
